* Report if the Lua function edit_bookmark_dialog receives the wrong
  number or types of arguments instead of silently failing.
* enhancement: Add ``Invalidate'' button to the cache manager.
* enhancement: Add ``Search contents'' button to the cache manager with
  which one can search through the cache items' data rather than their
  metadata.
* link against lua51 not lua50
* configure options to link against libmozjs of xulrunner
* using iconv for some multibyte charsets. It works if the terminal codepage
  is UTF-8. More charsets will be added on demand.

//////////////////////////////////////////////////////////////////////
The following changes should be removed from NEWS before ELinks 0.13.0
is released.  They are currently listed here just to show that they
have already been considered.

* Fixed bugs that were not in previous versions:
  - critical bug 1009: assertion failure in add_snippets()
    (mostly reverted)
//////////////////////////////////////////////////////////////////////

ELinks 0.12pre5:
----------------

Released on 2009-07-08.

* Debian bug 534835: Check the return values of some SpiderMonkey
  functions, to avoid crashes if out of memory.
* minor bug 1017: To work around HTTP server bugs, disable
  protocol.http.compression by default, until ELinks can report
  decompression errors or automatically retry the connection.
* enhancement: The French translation was updated.

Bugs that should be removed from NEWS before the 0.12.0 release:

* critical bug 1081: To fix crashes caused by different definitions of
  regfree() in TRE and in the system libc, link with TRE before any
  other libraries.  ELinks 0.12pre4 was the first release that had
  this bug.
* Searching for more than one fullwidth (e.g. Japanese) character now
  works.
* bug 1080: Support ``--dump-color-mode'' with ``--dump-charset UTF-8''.
  Neither of those worked before ELinks 0.12pre1.

ELinks 0.12pre4:
----------------
